adding title field, 1 rspec test around first id to be resolved

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,1 +1,12 @@
-"test" <%=@bookmarks%>
+<!-- in views/bookmarks/index.erb -->
+
+<ul>
+  <% @bookmarks.each do |bookmark| %>
+    <li>
+      <a href="<%= bookmark.url %>">
+        <%= bookmark.title %>
+      </a>
+    </li>
+  <% end %>
+</ul>
+
