--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -1,7 +1,10 @@
-<form action="/bookmarks" method="post">
-  <input type="text" name="url" />
+<!-- in views/bookmarks/new.erb -->
+<form method="post" action="/bookmarks">
+  <input type="text" name="url" placeholder="URL" />
+  <input type="text" name="title" placeholder="Title" />
   <input type="submit" value="Submit" />
 </form>
+
 
 
 
